<resources>
    <string name="app_name">Sleak</string>

    <!-- Titles -->
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_my_music">My Music</string>
    <string name="title_me">Me</string>
    <string name="title_songs">Songs</string>
    <string name="title_album">Album</string>
    <string name="title_login">Login</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_albums">Albums</string>
    <string name="title_tracks">Tracks</string>
    <string name="title_playlists">Playlists</string>
    <string name="title_artists">Artists</string>
    <string name="title_genres">Genres</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search</string>
    <string name="title_music_library">Music Library</string>
    <string name="title_identify_lyrics">Identify Lyrics</string>

    <!-- Error Messages -->
    <string name="error_access_denied">Access Denied</string>
    <string name="error_loading_data">There was a problem loading data. Please try again</string>
    <string name="error_empty_fields">Please fill in all required fields before continuing</string>
    <string name="error_delete_file">Could not delete song file</string>
    <string name="error_playing_song">There was an error playing this song</string>

    <!-- Info Messages -->
    <string name="info_playing_next">Song will play next</string>
    <string name="info_added_to_queue">Added song to end of queue</string>
    <string name="info_deleted_song">Song has been deleted form library and device</string>

    <!-- Descriptions -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="desc_np_album_art">Now Playing Album Art</string>
    <string name="desc_np_play">Play Now Playing</string>
    <string name="desc_np_pause">Pause Now Playing</string>
    <string name="desc_np_next">Next Now Playing</string>
    <string name="desc_np_previous">Previous Now Playing</string>
    <string name="desc_delete_song">Delete Track</string>
    <string name="desc_add_to_queue">Add To Queue</string>
    <string name="desc_play_next">Play Next</string>


    <string name="asset_statements" translatable="false">[{ \"include\":
        \"https://sleakapp.com/.well-known/assetlinks.json\" }]
    </string>
    <string name="title_delete_track">Delete Track</string>
    <string name="info_delete_track">Are you sure you want to delete this track?</string>
    <string name="desc_positive_button">OK</string>
    <string name="desc_negative_button">CANCEL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_queue">Queue</string>


</resources>
