<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_library"
                android:checked="true"
                android:icon="@drawable/ic_library_music_black_24dp"
                android:title="@string/title_music_library"/>
    </group>

    <group>
        <item
                android:id="@+id/nav_listen_to_lyrics"
                android:icon="@drawable/ic_radio_button_checked"
                android:title="@string/title_identify_lyrics"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/title_settings"/>
    </group>

</menu>
